spacing fix

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html {
-    font-family: Barlow;
+    font-family: Barlow, sans-serif;
 }
 
 :root {
@@ -20,6 +20,7 @@ body {
     max-width: 100vw;
     height: 100vh;
     padding: 1.5% 10%;
+    overflow-x: hidden;
 }
 
 [class^="box-"] {
@@ -82,7 +83,8 @@ main {
     width: 60%;
     color: var(--secondary-col);
     font-weight: 800;
-    font-size: 3.8em;
+    /* font-size: 3.8em; */
+    font-size: 1vw;
     text-transform: uppercase;
 }
 
@@ -316,7 +318,7 @@ span {
     }
 
     .button-menu {
-        height: 45%;
+        height: 75%;
         width: 40%;
     }
 
@@ -329,7 +331,7 @@ span {
     .box-1 {
         position: relative;
         top: 2%;
-        margin-bottom: 20px;
+        margin-bottom: 10%;
     }
 
     .header-div {
@@ -347,7 +349,7 @@ span {
     }
 
     .mid-sect {
-        min-height: 40%;
+        min-height: 60%;
         margin-top: 10%;
         grid-template-areas: "a b"
                              "c c";
